--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="E:\100 days of python\Day-56\my-personal-site\static\images\subham.png" alt="subham-profile-pic" height="200" width="200"></td>
+            <td><img src="subham.png" alt="subham-profile-pic" height="200" width="200"></td>
             <td> <h1>Subham Ghosh</h1>
                 <p><em>Full Stack Web Developer
                     Python Developer</em></p>
